--- a/Layout/style/style.css
+++ b/Layout/style/style.css
@@ -1,7 +1,5 @@
 .header-img {
     background-image: url("../assets/img/tomyung.png");
-    height: 50%;
+    height: 450px;
     z-index: -10;
-    
-
 }
